// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`es6-1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @providesModule foo
 * @flow
 */

export function foo() {

}

foo();

=====================================output=====================================
/**
 * @providesModule foo
 * @flow
 */

export function foo() {}

foo();

================================================================================
`;

exports[`es6-2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

import {foo} from 'foo';

foo();

=====================================output=====================================
/* @flow */

import { foo } from "foo";

foo();

================================================================================
`;
